        (e.g. /path/to/object?key=value)

      - correct unauthorized error when a chief editor/manager want to
        use the access tab and he don't have any access in the Silva
        root and the service members implements the use direct lookup
        protocol.

      - fixed a bug in tab_edit.pt where a dynamic string was being
        i18n-ed.

    Ported from 2.0 branch:

      - added logging to catalog rebuilds, because they can
        potentially take a very long time.

      - fixed a bug on tab_access.pt where a tal: was missing

      - added logging to catalog rebuilds, because they can
        potentially take a very long time.


  Silva 2.1

    Features added:


      - A quota subsystem has been added. It lets Managers set a quota
        on a publication (which can also be a virtual host
        root). Containers within the publication acquire the
        quota. The quota does not tally the space used by the xml of
        documents but counts only assets. The used space is tracked on
        every container and displayed on the settings screen. The
        quota can only be set by a Manager in the settings screen of
        the publication. The quota subsystem is off by default and
        must be activated in 'service_extensions',

      - 209497: Silva Link edit tab now displays rendered http link,
        while the preview shows the redirect within the frameset.

      - 100974: the preview tab in the SMI now previews using the
        public layout, with the SMI tabs still at the top.  NOTE: TOC
        elements in documents used to link to each items
        '/edit/tab_preview' when the document was viewed via it's
        preview tab.  This was creating issues, so now links in TOC
        elements always link to the public version.

      - 101827: A) lookup window will now list containers for any type
        of lookup window.  You can click the container title to "drill