@@ -124,6 +124,8 @@ Silva changes
 
     Ported from 2.0 branch:
 
+      - Fixed return_url when adding content from the lookup window.
+
       - added logging to catalog rebuilds, because they can
         potentially take a very long time.
 
